--- a/EC-infra/ec-data.yml
+++ b/EC-infra/ec-data.yml
@@ -21,19 +21,32 @@ services:
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-
-  kafka-ui:
-    image: provectuslabs/kafka-ui:latest
-    container_name: kafka-ui
+  kowl:
+    image: quay.io/cloudhut/kowl:latest
+    container_name: kowl
     depends_on:
+      - zookeeper
       - kafka
     ports:
       - "8080:8080"
     environment:
-      KAFKA_CLUSTERS_0_NAME: local-kafka
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
-      KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper:2181
-
+      - KAFKA_BROKERS=kafka:9092
+    volumes:
+      - kowl-storage:/data
+      
+  cmak:
+    image: obsidiandynamics/kafdrop
+    container_name: kafdrop
+    depends_on:
+      - zookeeper
+      - kafka
+    restart: unless-stopped
+    ports:
+      - "9000:9000"
+    environment:
+      ZK_HOSTS: zookeeper:2181
+      KAFKA_BROKERCONNECT: kafka:9092
+      
   postgres:
     image: postgres:15
     container_name: postgres
@@ -47,12 +60,11 @@ services:
     volumes:
       - /d/EC/Data:/var/lib/postgresql/data
 
-
   redis:
     image: redis:7
     container_name: redis
     ports:
-      - "6379:6379"
+      - "6380:6379"
     volumes:
       - redisdata:/data
 
@@ -99,3 +111,4 @@ volumes:
   pgdata:
   redisdata:
   grafana-storage:
+  kowl-storage:
