--- a/EC-infra/ec-data.yml
+++ b/EC-infra/ec-data.yml
@@ -21,6 +21,7 @@ services:
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_ALLOW_EVERYONE_IF_NO_ACL: "true"
   kowl:
     image: quay.io/cloudhut/kowl:latest
     container_name: kowl
